[OLINGO-175] Enabling fit to respond to action / function invocation (V3)