@@ -117,6 +117,10 @@
         <inherited>true</inherited>
         <configuration>
           <configuration>
+            <properties>
+              <cargo.jvmargs>-Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n
+                -noverify -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -XX:MaxPermSize=256m</cargo.jvmargs>
+            </properties>
             <files>
               <file>
                 <file>${project.build.directory}/classes/esigate.properties</file>
